2004-03-30  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nis/nis-initgroups.c: Implement getting the information
	from the netid.byname map if the system administrator allows this.

	* grp/initgroups.c (initgroups): Limit the initial allocation to 64
	entries to not allocate too much on systems with really high limits.

2004-03-30  Jakub Jelinek  <jakub@redhat.com>

	* nis/nss_nis/nis-service.c (struct search_t): New type.
	(dosearch): New function.
	(_nss_nis_getservbyname_r): Use it.  Call yp_get_default_domain
	unconditionally.
	(_nss_nis_getservbyport_r): Likewise.

2004-03-29  Alexandre Oliva  <aoliva@redhat.com>

	* sysdeps/unix/sysv/linux/sched_getaffinity.c: Prepend GLIBC_ to
	version names is SHLIB_COMPAT check.
	* sysdeps/unix/sysv/linux/sched_setaffinity.c: Likewise.

2004-03-29  Ulrich Drepper  <drepper@redhat.com>

	* nis/nss_nis/nis-rpc.c (saveit): Improve memory handling.  No need to
	allocate multiple blocks.
	(internal_nis_endrpcent): Adjust accordingly.
	* nis/nss_nis/nis-proto.c (saveit): Improve memory handling.  No need
	to allocate multiple blocks.
	(internal_nis_endprotoent): Adjust accordingly.
	* nis/nss_nis/nis-initgroups.c (saveit): Improve memory handling.  No
	need to allocate multiple blocks.
	(_nss_nis_initgroups_dyn): Adjust accordingly.
	* nis/nss_nis/nis-ethers.c (saveit): Improve memory handling.  No need
	to allocate multiple blocks.
	(internal_nis_endetherent): Adjust accordingly.
	* nis/nss_nis/nis-service.c (saveit): Improve memory handling.  No need
	to allocate multiple blocks.
	(internal_nis_endservent): Adjust accordingly.

	* nss/getXXbyYY_r.c: Return 0 for NSS_STATUS_NOTFOUND.

2004-03-26  Thorsten Kukuk  <kukuk@suse.de>

	* nis/nss_nis/nis-grp.c (_nss_nis_getgrnam_r): Don't
	set errno if group does not exist.

2004-03-28  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/sysconf.c (__sysconf): Handle
	_SC_SIGQUEUE_MAX.

2004-03-26  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-caller.c: New file.